fixed bug where header overlapped title on auto-scroll

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -9,3 +9,7 @@
 .job-title {
     font-style: italic;
 }
+
+.body-content .col:first-child {
+    padding-top: 5rem;
+}
