--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -40,7 +40,3 @@ html .navbar {
 html .navbar-toggler {
     border: 1px solid #8e8d8a;
 }
-
-.navbar-dark .navbar-toggler-icon {
-    /* background-image: url("data:image/svg+xml;.."); */
-}
